fix: replace String.formatted with String.format